--- a/bachelorarbeit/arch_one.tex
+++ b/bachelorarbeit/arch_one.tex
@@ -25,7 +25,7 @@
     {RightBandedBox={
         name=conv1,
         caption= ,
-        xlabel={{16}},
+        xlabel={{ 16, 16 }},
         ylabel=136,
         zlabel=369,
         fill=\ConvColor,
@@ -52,7 +52,7 @@
     {RightBandedBox={
         name=conv2,
         caption= ,
-        xlabel={{32}},
+        xlabel={{ 32, 32 }},
         ylabel= ,
         zlabel=178,
         fill=\ConvColor,
@@ -81,7 +81,7 @@
     {RightBandedBox={
         name=conv3,
         caption= ,
-        xlabel={{64}},
+        xlabel={{64, 64}},
         ylabel= ,
         zlabel=74,
         fill=\ConvColor,
@@ -110,7 +110,7 @@
     {RightBandedBox={
         name=conv4,
         caption= ,
-        xlabel={{128}},
+        xlabel={{128, 128}},
         ylabel= ,
         zlabel=32,
         fill=\ConvColor,
